--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
 					<div class="content__img"></div>
 					<div class="content__img"></div>
 				</div>
-				<div class="content__text"><span class="content__text-inner">.01</span></div>
+				<div class="content__text"><span class="content__text-inner">H</span></div>
 			</div>
 		</main>
 		<script src="js/blotter.min.js"></script>
